--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -22,7 +22,6 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768318.md#1" target="_blank">【名家专栏】仇恨会害死自己</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768318.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1188049966-webcrop-1200x720-150x120.jpg" align ="left"></a>最近在新泽西州泽西城（Jersey City）的一家犹太洁食超市所发生的枪击事件，是我们美国人正在因为憎恨邻居而杀死自己的最新例子之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768216.md#1" target="_blank">廖祖笙：2020年或为暴政收官年</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768216.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1506272237202039-560x400-150x120.jpg" align ="left"></a>习近平先生，你说“2020年是全面建成小康社会和‘十三五’规划圆满收官之年”，这不但让人无法苟同，而且有越来越多的迹象在表明，2020年或为暴政收官年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768270.md#1" target="_blank">隋志：善恶有报是天理 只论来早与来迟</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768270.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/95d4b9ee87d4abf9229f27be738525d0-600x400-150x120.jpg" align ="left"></a>据明慧网信息统计，二零一九年中共至少冤判789名法轮功学员，非法庭审851场，非法抓捕435人，构陷到检察院、法院1137人，警察对309名被非法判刑的法轮功学员敲诈勒索现金4037830元。在中共迫害法轮功长达二十年之后的今天，它仍不遗余力地对无辜民众加剧迫害，制造出许许多多的妻离子散、家破人亡的冤案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:18 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11773255.md#1" target="_blank">吕锡民：建筑节能供气系统概述</a><br></h3>人们大约有90％的时间待在室内空间。建筑通风和新鲜空气供应可以改善室内空气品质，另外SBS和SARS的潜在爆发已成人们关注焦点。根据统计数据，人们吸入新鲜空气约有400ppm二氧化碳浓度，而呼出废气则具有40,000ppm二氧化碳浓度，这显示CO2是室内空间最首要减少的污染物之一。为了保持室内良好空气品质，许多国家制定.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 7:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11773166.md#1" target="_blank">项云：无视人性准则是中共党性决定的</a><br></h3>安居乐业天然拒绝暴力生活是人本性的自然追求，由此产生的丰富多彩文化和娱乐也是自然而然；由此生产和生活中发生的各种人际关系规则也必然要相互共识，普世价值也必是人性光辉体现。所以信守各种承诺也是人性自然体现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 6:27 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/1/n11760382.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（13）</a><br></h3>我们能够认识的这个世界，比照眼睛观察到的事物，可以做这样一个描述：有一个一个可分辨出的物体，这些物体之间有一些间隙，可以插入很多同样的物体。有一定数目的相同或类似物体同时存在。一个物体一般会有可分辨的边界，边界内物质凝实，边界外没有同样物质。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 7:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11770894.md#1" target="_blank">袁斌：中共删帖封号有多疯狂？</a><br></h3>在中共筑起的防火墙内，文网越来越严，删帖封号越来越疯狂，这是众所周知的事。但若问究竟严到何等程度，疯狂到什么地步，许多人恐怕就知道的不是那么全面和具体了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:57 AM			</td></tr>
@@ -59,5 +58,16 @@
 谁当席梦思，谁被党活埋。
 看看周永康，你能比他帅？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 9:17 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769356.md#1" target="_blank">郑纯清：恶党末日临 动辄挨掌嘴</a><br></h3>恶党末日临 动辄挨掌嘴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768243.md#1" target="_blank">理悟：别当郎中当推手</a><br></h3>
+
+病不轻呀中共党，身患绝症入膏肓。
+保党郎中忙急救，四个自信当良方。(注)
+说是自信难自信，贫血气短心发慌。
+不治之症空费神，猛药一攻见阎王。
+中共横竖都是死，万邦挥拳打共狼。
+天灭中共天意定，滔天罪恶债必偿。
+没治喽，中共党，神医妙手难还阳。
+黄泉路上怨哪个？自打自倒果自尝。
+识时务者为俊杰，倒.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:53 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zsifxm298/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
